<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/nombreLa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="246dp"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/imgLauren"
            android:layout_width="148dp"
            android:layout_height="180dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/lauren" />

        <TextView
            android:id="@+id/txtBiogra"
            android:layout_width="248dp"
            android:layout_height="245dp"
            android:text="@string/biografia"
            android:textSize="20sp" />

    </LinearLayout>


    <TextView
        android:id="@+id/txtMed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/libros"
        android:textSize="30sp"
        android:layout_gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/libroBad"
            android:layout_width="138dp"
            android:layout_height="match_parent"
            android:src="@drawable/bad" />

        <TextView
            android:id="@+id/bad"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:text="@string/libro2"
            android:gravity="center"
            android:textSize="20sp"/>
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/libroFall"
            android:layout_width="138dp"
            android:layout_height="match_parent"
            android:src="@drawable/falling" />

        <TextView
            android:id="@+id/falling"
            android:layout_width="246dp"
            android:layout_height="63dp"
            android:text="@string/libro3"
            android:gravity="center"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/libroJosh"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:src="@drawable/josh" />

        <TextView
            android:id="@+id/josh"
            android:layout_width="246dp"
            android:layout_height="40dp"
            android:text="@string/libro1"
            android:gravity="center"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnAn"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/titulo1"/>

    <Button
        android:id="@+id/btnAnimate"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/titulo" />
    <Button
        android:id="@+id/btnAnimates"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/titulo2" />

</LinearLayout>